--- a/submit/index.html
+++ b/submit/index.html
@@ -2004,6 +2004,42 @@
             </tr>
           </tbody>
         </table>
+        <table class="tg">
+          <caption>
+            Table 1c: Further Experiments for CPA
+          </caption>
+          <thead>
+            <tr>
+              <th class="tg-5vuh"></th>
+              <th class="g-4akn">
+                <span
+                  style="
+                    font-weight: 700;
+                    font-style: normal;
+                    text-decoration: none;
+                    color: #000;
+                    background-color: transparent;
+                  "
+                  >Test Micro F1</span
+                >
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="tg-zkss">Subtable Model*</td>
+              <td class="tg-zkss">83.20</td>
+            </tr>
+            <tr>
+              <td class="tg-zkss">Two-Step Model*</td>
+              <td class="tg-zkss">84.34</td>
+            </tr>
+            <tr>
+              <td class="tg-zkss">Longformer*</td>
+              <td class="tg-zkss">51.74</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
 
       <p>
@@ -2295,42 +2331,6 @@
                   >91.60</span
                 >
               </td>
-            </tr>
-          </tbody>
-        </table>
-        <table class="tg">
-          <caption>
-            Table?: Experiments with CPA
-          </caption>
-          <thead>
-            <tr>
-              <th class="tg-5vuh"></th>
-              <th class="g-4akn">
-                <span
-                  style="
-                    font-weight: 700;
-                    font-style: normal;
-                    text-decoration: none;
-                    color: #000;
-                    background-color: transparent;
-                  "
-                  >Test F1</span
-                >
-              </th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="tg-zkss">Subtable Model*</td>
-              <td class="tg-zkss">83.20</td>
-            </tr>
-            <tr>
-              <td class="tg-zkss">Two-Step Model*</td>
-              <td class="tg-zkss">84.34</td>
-            </tr>
-            <tr>
-              <td class="tg-zkss">Longformer*</td>
-              <td class="tg-zkss">51.74</td>
             </tr>
           </tbody>
         </table>
