--- a/submit/index.html
+++ b/submit/index.html
@@ -3425,10 +3425,10 @@
         \[Relative Frequency(P,T) = \frac{P}{{T}}\]
       </span>
       <p>
-        where <i>P</i> is counts of specific (label, prediction) pair, and <i>T</i> is counts of total (label, prediction) pairs of the label. 
+        where <i>P</i> is counts of prediction for specific (label, prediction) pair, and <i>T</i> is counts of prediction of total pairs of the label. 
         For example, suppose we have a total of 100 predictions made for the 'ProductModel' label, 
         of which 20 were incorrectly predicted as 'IdentifierAT' and 60 were correctly predicted as 'ProductModel', 
-        Therefore, the Relative Frequency of ('ProductModel', 'IdentifierAT') is 0.2 and the Relative
+        Therefore, the Relative Frequency of error prediction pair of ('ProductModel', 'IdentifierAT') is 0.2 and the Relative
         Frequency of correct prediction pair of ('ProductModel', 'ProductModel') is 0.6.
       </p>
 
